--- a/locales/ar/translation.json
+++ b/locales/ar/translation.json
@@ -65,6 +65,7 @@
         "message": "الرسالة",
         "send": "إرسال الرسالة",
         "success": "تم إرسال الرسالة بنجاح!",
+        "error": "حدثت مشكلة أثناء إرسال النموذج",
         "info": {
             "phone": "0546064916",
             "email": "ash.anas099@gmail.com",
