--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -65,6 +65,7 @@
         "message": "הודעה",
         "send": "שלח הודעה",
         "success": "ההודעה נשלחה בהצלחה!",
+        "error": "אירעה בעיה בשליחת הטופס",
         "info": {
             "phone": "0546064916",
             "email": "ash.anas099@gmail.com",
